# MO_3rd_lab

./: .gitignore  CMakeLists.txt  gradient_proect.cpp  output.txt
matrix/: CMakeLists.txt  matrix.cpp  matrix.h
